sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:13: error: type mismatch;
 found   : Double
 required: Int
      if(plusPetit(i, i + ecart) == false){
                   ^AlgCombSort:13: error: type mismatch;
 found   : Double
 required: Int
      if(plusPetit(i, i + ecart) == false){
                        ^AlgCombSort:14: error: type mismatch;
 found   : Double
 required: Int
        echange(i,i+ecart)
                ^AlgCombSort:14: error: type mismatch;
 found   : Double
 required: Int
        echange(i,i+ecart)
                   ^