sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart : Double = getNombreValeurs()
  var n : Double = getNombreValeurs()
  var i : Double  = 0  
  
  while (ecart > 1 ){
    if (ecart > 1){
      ecart = ecart/1.3
    }
    i = 0
    while (i + ecart < n){
      if(plusPetit(i, i + ecart) == false){
        echange(i,i+ecart)
      }
      i = i +1
    }
  }
}
